--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.sparkjava:spark-core:2.7.2'
     compile "org.apache.opennlp:opennlp-tools:1.8.4"
     compile "org.apache.commons:commons-csv:1.5"
+    compile "com.google.code.gson:gson:2.8.0"
 
     compile "io.github.microutils:kotlin-logging:1.5.4"
     compile "ch.qos.logback:logback-classic:1.2.3"
